added getters and setters

--- a/.gitignore
+++ b/.gitignore
@@ -41,9 +41,9 @@ gradle-app.setting
 out/
 .idea/
 .idea_modules/
-.iml
-*.ipr
-*.iws
+.iml/
+*.ipr/
+*.iws/
 
 ##############################
 ## Eclipse
